--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Install Surge
       run: npm instal -g surge
     - name: Run Surge
-      run: surge ./ bootcamp2020newapp.surge.sh --token ${{secret.Surge_Token}}
+      run: surge ./ bootcamp2020newapp.surge.sh --token ${{secrets.Surge_Token}}
