--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -27,6 +27,6 @@ jobs:
       with: 
         version: 12
     - name: Install Surge
-      run: npm instal -g surge
+      run: npm install -g surge
     - name: Run Surge
       run: surge ./ bootcamp2020newapp.surge.sh --token ${{secrets.Surge_Token}}
